  with GCC 4.5.2. (VRI)
- bios/screen.c: Fixed wrong return value for vsetmode(). (VRI)
- aes/gemfslib.c, aes/geminput.c, aes/gemobed.c, aes/gemoblib.c, aes/gemshlib.c,
  bios/machine.c, cli/command.c, desk/deskapp.c, desk/desksupp.c, vdi/vdi_gdp.c,
  vdi/vdi_mouse.c, vdi/vdi_text.c: Fixed warnings with GCC 4.6.0. (VRI)
- bios/clock.c: Fixed IKBD Y2K issues by using a pivot year at 80. (VRI)

2011-04-20
- bios/kprint.c: Fixed dopanic() for all the processors. (VRI)
- bios/clock.c: Fixed seconds when reading the Mega ST clock. (VRI)

2011-04-22
- bios/clock.c, bios/clock.h: Removed dead code. (VRI)
- bios/clock.c: Added debug traces. (VRI)
- bios/clock.c: Enabled setting the date on NVRAM machines. (VRI)
- bios/clock.c: Fixed setting the date on MegaRTC machines. (VRI)
- bios/clock.c: Fixed Y2K issues when setting the IKBD date. (VRI)

2011-04-27
- bios/initinfo.c: Fixed the displayed startup date on Steem. (VRI)
- tools/mkheader.awk: Fixed the BCD build date in the ROM header to match the
  DDMMYYYY format used in Atari ROMs. (VRI)

2011-04-29
- cli/command.c: Display EmuCON build year on 4 digits. (VRI)

2011-07-26
- country.mk, Makefile, bios/country.h, bios/keyb_it.h, po/it.po, po/LINGUAS:
  Added Italian translation stubs. (VRI)

2011-07-29
- desk/desk_rsc.c, po/ru.po: Fixed the menu separator lines length in the
  Russian translation. Contributed by Dima Sobolev. (VRI)
- po/gr.po: Converted to LF line endings. (VRI)
- po/cs.po, po/de.po, po/es.po, po/fi.po, po/fr.po, po/gr.po, po/it.po: Updated
  from new sources. (VRI)
- desk/desk_rsc.c, po/de.po, po/es.po, po/fi.po, po/gr.po, po/ru.po: Fixed all
  the menu separator lines length (some of them were still wrong). (VRI)

2011-08-05
- desk/icons/*.icn, desk/icons/iconhi.h, desk/icons/iconlo.h,
  desk/icons/read.me: Converted to LF line endings. (VRI)
- desk/icons/*.icn, desk/icons.c: Fixed icon data ordering for GCC 4.6. (VRI)
- desk/deskins.c, desk/icons.c, desk/icons.h: Added constness. (VRI)